# Advent-of-Code

./: .gitignore  README.md  pyproject.toml
2021/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  helpers.py
2021/inputs/: 23.txt
2022/: .gitignore  1.py  10.py  11.py  12.py  13.py  14.py  15.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  Makefile  README.md  utils.py
2022/inputs/: 5-2.txt
2023/: .gitignore  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  index.md  requirements.txt  template.py  utils.py  utils_types.py
2023/visualisations/: 10.txt  17.txt
2023/visualizations/: 10.txt  16.txt  21.txt
2024/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
aoc/: __init__.py  grid.py  itertools.py  utils.py
scripts/: merge_old_repo.sh  populate_year.sh  template.py
