[project]
name = "advent-of-code"
version = "0.1.0"
description = "Repository for advent of code since 2021."
readme = "README.md"
authors = [
    { name = "Clément Laroudie", email = "clem.laroudie@gmail.com" }
]
keywords = ["advent-of-code", "challenge"]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.3",
    "more-itertools>=10.5.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.uv]
package = true
